--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.7",
     "algoliasearch": "^5.42.0",
+    "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "firebase": "^12.5.0",
+    "firebase-admin": "^13.6.0",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "react": "19.2.0",
